# Project_CIR2_2021_2022

./: .gitignore  CMakeLists.txt  README.md
SFML/: CMakeLists.txt
SFML-2.5.1-static/lib/: sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s-d.lib  sfml-window-s.lib
SFML_examples/: CMakeLists.txt
SFML_examples/test_SFML/: CMakeLists.txt  Car.cpp  Car.hpp  main.cpp
SFML_examples/test_SFML1/: CMakeLists.txt  Follower.cpp  Follower.hpp  Leader.cpp  Leader.hpp  main.cpp
SFML_examples/test_SFML2/: CMakeLists.txt  main.cpp
SFML_examples/test_SFML3/: .gitignore  CMakeLists.txt  Plane.cpp  Plane.hpp  main.cpp
Test_Plane/: CMakeLists.txt  plane.cpp
socket/: CMakeLists.txt
socket/client/: CMakeLists.txt  socket_example_client.cpp
socket/run_client_instances/: CMakeLists.txt  run_client_instances.cpp
socket/server/: CMakeLists.txt  socket_example_server.cpp
thread/: CMakeLists.txt  some_defines.cpp  some_defines.hpp  thread_example.cpp
